1.added functions to getDiskStatusTmpl, getHostStatusTmpl, formatTreeLblValueTooltip 2.updated host tree view of tenant storage disks 3.at a time only single host will be expanded with its disks. 4.updated tooltips for hosts and disks. now using the standard tooltips style 5.tree-tip style width adjusted for disks as data is more wider than default. 6.updated d3 layout from tree to cluster 7.fixed issue while reloading the chart and grid upon clicking the tab 8.json response for disk tree no more has children tag, so updated to pull from hosts and osds.

--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -304,14 +304,8 @@
 #svg-osd-tree-host{
     visibility: hidden;
 }
-.tree-tip .tooltip {
-    display: block;
-    position: absolute;
-    font: 12px sans-serif;
-    background: lightsteelblue;
-    border: 0px;
-    border-radius: 8px;
-    pointer-events: none;
+.tree-tip .chart-tooltip{
+    width: 350px !important;
 }
 /*
 #usage-gauge-container {
