1. fixed issue with host tree not loading when loading tab. root cause: chart container was not initialized before data refresh was called. 2. separate style classes for host and disk tooltips

--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -304,9 +304,19 @@
 #svg-osd-tree-host{
     visibility: hidden;
 }
-.tree-tip .chart-tooltip{
+.tree-host-tip .chart-tooltip{
+    width: 150px !important;
+}
+.tree-host-tip span{
+    margin: 0px !important;
+}
+.tree-disk-tip .chart-tooltip{
     width: 350px !important;
 }
+.tree-disk-tip span{
+    margin: 0px !important;
+}
+
 /*
 #usage-gauge-container {
     background: transparent url("/img/kendo/gauge-container.png") no-repeat 50% 50%;
