new time series chart for individual disk stats and other related commits. 1. new tenantMonitorStorageUrl['DISK_ACTIVITY_NOW'] for getting disk activity for last 10 min 2. MessageTS in JSON response for flow-series data needs division by 1000 to get correct date time. 3. updated tooltips on line charts. 4. adding time serires line charts for individual disk throughout and iops data. 5. seperate time interval obj for fetching the json updates. 6. refreshview will update the chart once the tab was initialized and details tab is revisited. 7. fixed typo which assigns the currTab to Host Tree instead of comparison for refresh cycle. 8. new disk details template 'disk-details-template' for individul disk data.

--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -300,9 +300,13 @@
 
 #svg-osd-tree-osd{
     visibility: hidden;
+    width: 0px;
+    height: 0px;
 }
 #svg-osd-tree-host{
     visibility: hidden;
+    width: 0px;
+    height: 0px;
 }
 .tree-host-tip .chart-tooltip{
     width: 150px !important;
@@ -315,6 +319,29 @@
 }
 .tree-disk-tip span{
     margin: 0px !important;
+}
+
+.disk-activity-chart {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+.disk-activity-chart .ui-tabs-nav {
+    height: 0px;
+    padding: 0px 0px 0px 10px !important;
+    font-size: 13px;
+    border-bottom: 0px !important;
+    background-color: #ffffff !important;
+}
+.disk-activity-chart .ui-tabs-panel {
+    padding-bottom: 16px;
+}
+.disk-activity-chart .chart-content {
+    padding: 0 10px;
+}
+.disk-activity-chart svg {
+    height: 101px;
+    width: 100%;
+    margin-top: 10px;
 }
 
 /*
