all storage grid enhancements. 1. disk state to be shown in all lower caps. 2. removed OSD reference in grid header 3. units will be shown part of the values instead in column header. 4. updated cell widths. Not Available to N/A 5. for monitor page, moved root HD details to expanded details page. added IP addr in the main grid

--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -267,9 +267,10 @@
 .grid-monitor{
     font-weight: normal;    
 }
+/*
 .slick-row .grid-status-label{
     text-align: center;
-}
+}*/
 
 #osds-bubble{
     height: 290px;
