inside dashboard health widget, clicking on monitor status redirects to monitors page for more details.

--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -15,7 +15,7 @@
     background: transparent;
     border: 1px solid #3182BD;
     text-align: center;
-    cursor: none;
+    cursor: pointer;
 }
 .status-message{
     color: black;
