--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -53,10 +53,16 @@
 
 .node use {
   fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-  opacity: 0.8;
+  opacity: 1;
   cursor: pointer;
+}
+.node-root {
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
+.node-host {
+    stroke: steelblue;
+    stroke-width: 1.5px;
 }
 
 .node {
@@ -66,8 +72,8 @@
 .link {
   fill: none;
   stroke: #ccc;
-  stroke-width: 1.5px;
-  opacity: 0.3;
+  stroke-width: 2px;
+  opacity: 0.7;
 }
 .pools-bar-chart .ui-tabs-nav {
     height: 0px;
