--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -137,7 +137,7 @@
     stroke-width: 1px;
 }
 
-#usage-labelbox {
+#usage-perc-labelbox {
     position: absolute;
     top:70px;
     left: 10px;
@@ -164,20 +164,36 @@
     font-family: Open Sans;
     color: #FF7F0E;
 }
-
+#usage-labelbox {
+    position: absolute;
+    top:140px;
+    width: 165px;
+    text-align: center;
+    z-index: 1;
+}
 .df-used-label{
-    font-size: 13px;
+    line-height: 9px;
     font-family: Open Sans;
     font-weight: 400;
-    color: #3182BD;
+    background-color: #1F77B4;
 }
 .df-total-label{
-    font-size: 13px;
+    margin-left: 2px;
+    line-height: 9px;
     font-family: Open Sans;
     font-weight: 400;
-    color: #3182BD;
+    background-color: #C6DBEF;
 }
-
+#df-used{
+    margin-left: 2px;
+    font-size: 12px;
+    font-weight: 400;
+}
+#df-total{
+    margin-left: 2px;
+    font-size: 12px;
+    font-weight: 400;
+}
 .infra-stor-chart .key {
     font-weight: normal;
     color: #3182bd
@@ -267,18 +283,7 @@
     color: #1F77B4;
 }
 
-#df-used{
-    margin-left: 2px;
-    font-size: 13px;
-    font-weight: 400;
-    color: #3182BD;
-}
-#df-total{
-    margin-left: 2px;
-    font-size: 13px;
-    font-weight: 400;
-    color: #3182BD;
-}
+
 .grid-monitor{
     font-weight: normal;    
 }
