--- a/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
+++ b/webroot/monitor/tenant-storage/common/ui/css/contrail.storage.css
@@ -88,6 +88,7 @@
 .pools-bar-chart svg {
     height: 70px;
     padding-bottom: 10px;
+    margin-top: -10px;
 }
 .disks-bar-chart svg{
     height: 70px;
