1. Fixed: Removed the Confilct CSS Style 2. Added to generate in Code Coverage, Cobertura style report.
Partial-Bug: #1571795,

Change-Id: I232514f44152ddf6a731b7fb0128aead5867457f
Closes-Bug: #1569075

--- a/webroot/common/ui/css/contrail.storage.css
+++ b/webroot/common/ui/css/contrail.storage.css
@@ -139,13 +139,6 @@
     padding-top: 15px;
 }
 
-
-
-.node use {
-    fill: #fff;
-    opacity: 1;
-    cursor: pointer;
-}
 .node-root {
     stroke: steelblue;
     stroke-width: 1.5px;
@@ -155,9 +148,16 @@
     stroke-width: 1.5px;
 }
 
+/*
+.node use {
+    fill: #fff;
+    opacity: 1;
+    cursor: pointer;
+}
 .node {
     font: 10px Open Sans;
 }
+*/
 
 .link {
     fill: none;
